# raytrace

./: .gitignore  .project  CMakeLists.txt  README.md  config.go  go.mod  go.sum  main.cxx  main.go  meson.build  pom.xml
.github/workflows/: build.yaml  format.yaml
go/: .gitignore  config.go  go.mod  go.sum  main.go
go/source/: container.go  hittable.go  material.go  object.go  scene.go  vector.go
include/: hittable.h  vectors.h  vectors.txx
java/: .gitignore  .project  pom.xml  pom.xml.versionsBackup
java/src/main/java/com/app/: App.java
java/src/main/java/com/app/source/: Box.java  HitData.java  Hittable.java  List.java  Material.java  Metal.java  Pair.java  Scene.java  Sphere.java  Tree.java  Vector.java
java/src/test/java/com/app/: AppTest.java
rust/: .gitignore  Cargo.toml  README.md
rust/src/: config.rs  container.rs  hittable.rs  lib.rs  main.rs  material.rs  object.rs  scene.rs  vector.rs
source/: material.go  object.go  others.go  vector.go
src/: CMakeLists.txt  meson.build
src/main/java/com/app/: App.java  Config.java  DefaultConfig.java
src/main/java/com/app/source/: Box.java  Glass.java  HitData.java  HittableList.java  HittableTree.java  List.java  Matte.java  Metal.java  Pair.java  Scene.java  Sphere.java  Tree.java  Vector.java
src/main/java/raytrace/: App.java
src/test/java/raytrace/: AppTest.java
templates/: vectors.txx
