[package]
name = "raytrace-rs"
version = "0.1.0"
authors = ["MutatedFlood <patrick1031wang@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.4"
image = "0.23.12"
indicatif = "0.15.0"
num = "0.3.1"
rand = "0.8.1"
rayon = "1.5.0"
